# Jarvis

./: .claude-coordination.json  .commitlintrc.json  .coveragerc  .dockerignore  .gcloudignore  .gitattributes  .gitignore  .gsd-spec.md  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .tmp_pytest_chunk1.txt  =0.12.10  AGENTS.md  AI_README.md  AI_RUNTIME_IMPLEMENTATION.md  ARCHITECTURE_PLAN.md  AUDIT_200_POINT.md  AUDIT_DELIVERABLE_A.md  AUDIT_DELIVERABLE_B.md  AUDIT_DELIVERABLE_C.md  AUDIT_DELIVERABLE_D.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_TODO.md  AUTOMATION_SETUP_GUIDE.md  AUTONOMOUS_X_INTEGRATION_COMPLETE.md  BACKTEST_10_DAY_ANALYSIS.md  BOOTSTRAP.md  BOOTSTRAP_VPS.md  BOT_INTEGRATION_EXAMPLES.md  BOT_LOCK_FIX_DEPLOYMENT.md  BRAND_GUIDE_FIX_20260122.md  BUY_TRACKER_INTEGRATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLAWDBOTS_NEW_FEATURES.md  CLAWDBOTS_UPDATE_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_AUDIT_2026-01-03.md  CONNECTIONS.md  (+245 more)
.agent/: SOUL.md
.githooks/: pre-push
.github/: pull_request_template.md
.idx/: dev.nix
.planning/: AGENT_COORDINATION_NOTES.md  EXECUTION_SUMMARY.md  GATE.md  HANDOFF_TRADING_TERMINAL_2026-02-05.md  JARVIS-DEBUG-PRD.md  PHASE_6_COMPLETE.md  PHASE_7_SESSION_SUMMARY.md  PRD_FLEET_STABILIZATION_2026-02-05.md  PROJECT.md  RALPH-WIGGUM-FINAL-STATUS.md  RALPH-WIGGUM-SESSION-2026-01-26.md  REQUIREMENTS.md  ROADMAP.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026-01-26.md  STATE.md  SUBAGENT_ORCHESTRATION.md  TODO_FLEET_STABILIZATION_2026-02-05.md  V1-LAUNCH-READINESS.md  config.json
api/: errors.py  fastapi_app.py  log_rotation.py  metrics.py  pagination.py  server.py
audit_reports/: 2026-01-19_twitter_posting_audit.md  2026-01-20_anchor_program_id_status.md  2026-01-20_feature_flag_kill_switch_audit.md  2026-01-20_reliability_stability_audit.md  2026-01-20_telegram_service_fix.md  2026-01-20_trading_kill_switch.md  BASELINE.md  CHANGELOG.md  FINDINGS.md  UI_QA_QC_2026-01-29.md  streamline_unify_audit.md
bags-swap-api/: package-lock.json  package.json
bots/: __init__.py  health_endpoint.py  public_trading_bot_supervisor.py  supervisor.py
cdp-tunnel/: package-lock.json  package.json  tunnel.js
claude_vibe_export/: README.md
config/: mcp.docker.json  mcp.jarvis.json  rpc_providers.json  trust_ladder.template.json
core/: INDEX.md  __init__.py  ability_acquisition.py  action_feedback.py  actions.py  adaptive_algorithm.py  agent_graph.py  agent_router.py  ai_control_plane.py  alerts.py  analytics.py  api_server.py  approval_gate.py  arbitrage.py  async_utils.py  audit_logger.py  automation_suggester.py  autonomous_agent.py  autonomous_controller.py  autonomous_improver.py  autonomous_learner.py  autonomous_manager.py  autonomous_researcher.py  autonomous_restart.py  autonomous_web_agent.py  background_improver.py  backtester.py  backup.py  backup_manager.py  backup_recovery_guide.md  bags_api.py  bags_websocket.py  benchmarks.py  birdeye.py  bootstrap.py  bot_identity.py  bridge_monitor.py  browser_automation.py  cache_manager.py  circular_logic.py  (+258 more)
data/: user_profile.json
data_migrations/: 001_state_consolidation.py
deploy/: DEPLOYMENT.md  README.md  clawdbots.target  clawdsquishy.service  clawdyoda.service  install-clawdbots.sh  install-services.sh  install-vps.sh  jarvis-buytracker.service  jarvis-treasury.service  jarvis-twitter.service  setup_systemd.sh  uninstall-vps.sh
deployment/: firewall_zone_c.sh  jarvis-ai-runtime.service  requirements_per_zone.md  zone_a.dockerfile  zone_b.dockerfile  zone_c.dockerfile
desktop/: task_gui.py
docs/: 2026-02-19-e2e-stabilization-report.md  AGENT_NOTES.md  AGENT_STATUS_REALTIME.md  AGENT_TARS_INTEGRATION.md  AGENT_TARS_QUICKSTART.md  AI_COMPUTER_DEEP_INTEGRATION_ARCHITECTURE.md  AI_DEVELOPMENT_WORKFLOW_GUIDE.md  API_DOCUMENTATION.md  API_IMPROVEMENTS.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_2026-01-01.md  AUDIT_100_IMPROVEMENTS.md  AUTOMATED_ONCHAIN_INTELLIGENCE_GUIDE.md  AUTOMATION_SETUP_GUIDE.md  BLUE_CHIP_SOLANA_TOKEN_REGISTRY.md  BOT_CAPABILITIES_REFERENCE.md  BOT_DEPLOYMENT_CHECKLIST.md  BOT_TOKEN_DEPLOYMENT_COMPLETE_GUIDE.md  BOT_TOKEN_VERIFICATION_JAN_31.md  BUILD_STREAMLINE.md  CHANGE_PROPOSAL_TEMPLATE.md  CHART_INTEGRATION.md  CLAUDE_OPUS_INGEST_GUIDE.md  CLAWDBOT_API_REFERENCE.md  CLAWDBOT_ERROR_SUMMARY_FEB_3.md  CLAWDBOT_TOKEN_REGENERATION_GUIDE.md  CODE_RECONCILIATION_JAN_31.md  CODE_REVIEW_CHECKLIST.md  CODE_STYLE.md  COMMIT_CONVENTIONS.md  COMPETITIVE_ADVANTAGES.md  COMPREHENSIVE_AUDIT_FIXES_JAN_2026.md  COMPREHENSIVE_BOT_POLLING_AUDIT_JAN_31.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEFICIENCY_AUDIT_JAN_2026.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS_REALTIME.md  DEVELOPER_SETUP.md  (+125 more)
examples/: db_pool_usage.py  json_logging_demo.py  logging_example.py  test_window_interaction.py  transaction_verification_usage.py
frontend/: REFACTOR_COMPLETE.md  REFACTOR_PLAN.md  index.html  package-lock.json  package.json  start_dev_server.ipynb  tailwind.config.js  vite.config.js
jarvis-sniper/: .dockerignore  .env.example  .firebaserc  BACKTEST_RESULTS.md  CREDITS.md  DEPLOYMENT.md  Dockerfile  NOTEBOOK_LM_CONTEXT.md  PROJECT_STATUS.md  R4_SESSION_HANDOFF.md  README.md  architecture.isoflow.json  clean-start.ps1  docker-compose.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
jarvis-web-terminal/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
(+4924 files in other folders)
